Added authentification cookies and added authentification verification in GmailController

--- a/subscription-manager/src/main/resources/application.properties
+++ b/subscription-manager/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapi
 spring.security.oauth2.client.provider.google.user-info-uri=https://openidconnect.googleapis.com/v1/userinfo
 spring.security.oauth2.client.provider.google.jwk-set-uri=https://www.googleapis.com/oauth2/v3/certs
 spring.security.oauth2.client.provider.google.user-name-attribute=sub
+
+server.servlet.session.cookie.same-site=None
+server.servlet.session.cookie.secure=true
